# dcpwizard

./: .clang-format  .gitignore  .gitmodules  CHANGELOG.md  CMakeLists.txt  DESIGN.md  DESIGN_TODO.md  Dockerfile  LICENSE  README.md  com.dcpwizard.desktop.yml  format.sh
.github/workflows/: ci.yml  gui-release.yml  release.yml
bindings/python/: CMakeLists.txt  dcpwizard.i  pyproject.toml
bindings/python/dcpwizard/: __init__.py
debian/: changelog  control  copyright  dcpwizard.desktop  rules
docs/: index.html
gui/: index.html  package-lock.json  package.json  pnpm-lock.yaml
gui/src/: main.js  preview.js  style.css  timeline.js
gui/src-tauri/: Cargo.toml  tauri.conf.json
gui/src-tauri/.cargo/: config.toml
gui/src-tauri/capabilities/: default.json
gui/src-tauri/icons/: icon.icns
gui/src-tauri/src/: lib.rs  main.rs  pipeline.rs  preview_server.rs  preview_server_stub.rs  timeline.rs
include/dcpwizard/: assetmap.h  atmos.h  audio.h  burnin.h  colour.h  copy_drive.h  cpl.h  dcp.h  dcpwizard.h  dtsx.h  encode.h  encrypt.h  export.h  geometry.h  hash.h  hfr.h  import.h  info.h  j2k_transcode.h  job_queue.h  kdm.h  kdm_advanced.h  loudness.h  markers.h  multi_cpl.h  mxf_wrap.h  pkl.h  portable.h  preferences.h  profiles.h  qc.h  reel.h  report.h  rest_api.h  shell_completion.h  stereo3d.h  subtitle.h  transcode.h  verify.h  vf.h  (+1 more)
rust/: Cargo.toml  deny.toml
rust/crates/dcpwizard-cli/: Cargo.toml
rust/crates/dcpwizard-cli/src/: main.rs
rust/crates/dcpwizard-cli/tests/: cli_integration.rs
rust/crates/dcpwizard-core/: Cargo.toml
rust/crates/dcpwizard-core/src/: accessibility.rs  assemble.rs  assetmap.rs  atmos.rs  audio.rs  audio_route.rs  burnin.rs  cert_fetch.rs  certificate.rs  cinema.rs  colour.rs  combine.rs  conform.rs  copy_drive.rs  cpl.rs  cpl_annotation.rs  dashboard.rs  dcdm.rs  dcp.rs  dcp_diff.rs  decrypt.rs  disk.rs  dolby_vision.rs  dtsx.rs  edit.rs  edl_import.rs  email.rs  encode.rs  encode_qol.rs  encrypt.rs  export.rs  flm.rs  free_space.rs  geometry.rs  grok.rs  hash.rs  hdr.rs  hfr.rs  import.rs  info.rs  (+44 more)
rust/crates/dcpwizard-core/tests/: apv.rs  assemble.rs  ccap_track.rs  combine.rs  conform_assembly.rs  decrypt.rs  edit.rs  ingest_package.rs  mca_track.rs  multi_composition.rs  pad_color.rs  padding.rs  sign_language.rs  subtitle_formats.rs  subtitle_track.rs  subtitle_vf.rs  versions.rs
scripts/: setup-tauri-bin.sh
src/: assetmap.cpp  atmos.cpp  audio.cpp  burnin.cpp  colour.cpp  copy_drive.cpp  cpl.cpp  dcp.cpp  dtsx.cpp  encode.cpp  encrypt.cpp  export.cpp  geometry.cpp  hash.cpp  hfr.cpp  import.cpp  info.cpp  j2k_transcode.cpp  job_queue.cpp  kdm.cpp  kdm_advanced.cpp  loudness.cpp  main.cpp  markers.cpp  multi_cpl.cpp  mxf_wrap.cpp  pkl.cpp  preferences.cpp  profiles.cpp  qc.cpp  reel.cpp  report.cpp  rest_api.cpp  shell_completion.cpp  stereo3d.cpp  subtitle.cpp  transcode.cpp  verify.cpp  vf.cpp  watch.cpp
tests/: cli_flags_test.sh  test_cli.py  test_gui.py  test_integration.cpp  test_job_queue.cpp  test_main.cpp
