[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "GPL-3.0-or-later"
version = "0.1.0"

[workspace.dependencies]
clap = { version = "4", features = ["derive"] }
dcpdoctor-core = { git = "https://github.com/PostPerfection/dcpdoctor.git", branch = "master" }
postkit = { path = "../extern/postkit", features = ["grok-ffi", "openjpeg"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
