[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2024"
license = "GPL-3.0-or-later"
version = "1.1.0"

[workspace.dependencies]
asdcplib = { git = "https://github.com/PostPerfection/asdcplib-rs.git", rev = "5fe4d61" }
clap = { version = "4", features = ["derive"] }
dcpdoctor-core = { git = "https://github.com/PostPerfection/dcpdoctor.git", rev = "888954f" }
postkit = { path = "../extern/postkit", features = ["grok-ffi"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
sha1 = "0.10"
thiserror = "2"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1", features = ["v4"] }
