[package]
name = "dcpwizard-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DCP Wizard CLI — Digital Cinema Package creator"

[[bin]]
name = "dcpwizard"
path = "src/main.rs"

[dependencies]
clap.workspace = true
dcpwizard-core = { path = "../dcpwizard-core" }
postkit.workspace = true
ctrlc = "3"
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
