[package]
name = "dcpwizard-core"
version.workspace = true
edition.workspace = true
license.workspace = true
description = "DCP Wizard — Digital Cinema Package creation library"

[dependencies]
asdcplib = { git = "https://github.com/PostPerfection/asdcplib-rs.git", branch = "master" }
dcpdoctor-core.workspace = true
postkit.workspace = true
serde.workspace = true
serde_json.workspace = true
sha1.workspace = true
thiserror.workspace = true
time = "0.3"
tracing.workspace = true
uuid.workspace = true

[dev-dependencies]
tempfile = "3"
